# issen

./: .gitignore  .gitmodules  CMakeLists.txt  Gemfile  Makefile.am  README.md  _config.yml  bit_manipulations.cpp  bit_manipulations.hpp  board.cpp  board.hpp  configure.ac  gcc_intrinsics.hpp  generate.cpp  generate.hpp  hand.cpp  hand.hpp  index.html  index.md  line.cpp  line.hpp  main.cpp  params.json  search.hpp  server.rb  state.cpp  state.hpp  statistic_value_generator.cpp  subboard.cpp  subboard.hpp  subboard.txt  think.sh  tree.cpp  tree.hpp  tree_manager.cpp  tree_manager.hpp  treesearch.cpp  treesearch.hpp  treesearch_impl.hpp  utils.cpp  (+3 more)
include/: bit_manipulations.hpp  board.hpp  book.hpp  gamesolver.hpp  gcc_intrinsics.hpp  generate.hpp  ggs_archive_parser.hpp  iddfs.hpp  play.hpp  record.hpp  result.hpp  state.hpp  statistic_value_generator.hpp  subboard.hpp  table.hpp  tree.hpp  utils.hpp  value.hpp
src/: CMakeLists.txt  Makefile.am  bit_manipulations.cpp  bit_manipulations.hpp  board.hpp  book.cpp  endgame_solver.hpp  gamesolver.cpp  gcc_intrinsics.cpp  generate.cpp  ggs_archive_parser.cpp  hand.cpp  hand.hpp  iddfs.cpp  line.cpp  main.cpp  movable_generator.cpp  move_generator.cpp  play.cpp  record.hpp  search.hpp  state.cpp  statistic_value_generator.cpp  subboard.cpp  table.cpp  tree.cpp  treesearch.cpp  treesearch.hpp  utils.cpp  value.cpp
