bin_PROGRAMS=issen

issen_CXXFLAGS=-std=c++14 -fast -g -Wall -Wextra
issen_SOURCES=bit_manipulations.cpp bit_manipulations.hpp board.hpp hand.cpp \
    hand.hpp line.cpp line.hpp main.cpp state.cpp state.hpp tree.cpp tree.hpp \
    tree_manager.hpp tree_manager.cpp treesearch.hpp treesearch.cpp utils.hpp \
    utils.cpp value.cpp value.hpp
