bin_PROGRAMS=issen

AM_CXXFLAGS=-std=c++14 -O3 -flto -g -Wall -Wextra -mtune=native -march=native
issen_SOURCES=bit_manipulations.cpp bit_manipulations.hpp board.hpp generate.cpp generate.hpp gcc_intrinsics.cpp gcc_intrinsics.hpp hand.cpp hand.hpp line.cpp line.hpp main.cpp state.cpp state.hpp tree.cpp tree.hpp tree_manager.hpp tree_manager.cpp treesearch.hpp treesearch.cpp utils.hpp utils.cpp value.cpp value.hpp
